# RCC_cpp

./: .gitignore  findIndicatorMats.jl  globalVars.jl  main  make.sh  temp  test.py
container/: Dockerfile
cpp/: CMakeLists.txt
cpp/src/: findIndicatorMats.cpp
cpp_data_backup/: checkStatus.py
cpp_libraries/or-tools_x86_64_Ubuntu-24.04_cpp_v9.12.4544/lib/: libCbc.so.2.10.12  libCbcSolver.so.2.10.12  libCgl.so.0.60.9  libClp.so.1.17.10  libClpSolver.so.1.17.10  libCoinUtils.so.2.11.12  libabsl_base.so.2407.0.0  libabsl_cord.so.2407.0.0  libabsl_cord_internal.so.2407.0.0  libabsl_crc_internal.so.2407.0.0  libabsl_debugging_internal.so.2407.0.0  libabsl_die_if_null.so.2407.0.0  libabsl_failure_signal_handler.so.2407.0.0  libabsl_flags_internal.so.2407.0.0  libabsl_flags_parse.so.2407.0.0  libabsl_flags_usage.so.2407.0.0  libabsl_graphcycles_internal.so.2407.0.0  libabsl_hashtablez_sampler.so.2407.0.0  libabsl_kernel_timeout_internal.so.2407.0.0  libabsl_log_flags.so.2407.0.0  libabsl_log_globals.so.2407.0.0  libabsl_log_internal_globals.so.2407.0.0  libabsl_log_internal_log_sink_set.so.2407.0.0  libabsl_log_internal_message.so.2407.0.0  libabsl_malloc_internal.so.2407.0.0  libabsl_random_internal_distribution_test_util.so.2407.0.0  libabsl_statusor.so.2407.0.0  libabsl_strings.so.2407.0.0  libabsl_strings_internal.so.2407.0.0  libabsl_symbolize.so.2407.0.0  libabsl_synchronization.so.2407.0.0  libabsl_time.so.2407.0.0  libortools_flatzinc.so.9.12.4544  libprotobuf-lite.so.29.3.0  libprotobuf.so.29.3.0  libre2.so.11.0.0
cpp_libraries/or-tools_x86_64_Ubuntu-24.04_cpp_v9.12.4544/lib/cmake/ortools/: ortoolsConfigVersion.cmake  ortoolsTargets-release.cmake  ortoolsTargets.cmake
cpp_libraries/or-tools_x86_64_Ubuntu-24.04_cpp_v9.12.4544/lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_absl_vlog_is_on.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_bounded_utf8_length_sequence.pc  absl_btree.pc  absl_charset.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  (+155 more)
cpp_libraries/or-tools_x86_64_Ubuntu-24.04_cpp_v9.12.4544/share/pkgconfig/: zlib.pc
data/: IMats.npy  aBounds.npy  genus.npy  intMat.npy  nat_solution.npy
main/: CMakeLists.txt  temp
main/src/: findIndicatorMats.cpp
old_cluster_code_backup/: FindIndicatorMats.py  genDF.py  genSubTR.sh  main.sh  selectHeldJobs.py  splitOnCluster.sh
old_cluster_code_backup/data/: aBounds.npy  currentJobs.npy  intMat.npy
oneStep/: CMakeLists.txt  test.tr
oneStep/src/: findIndicatorMats.cpp
processing/: CMakeLists.txt  temp.py
processing/src/: processing.cpp
small_batch/: FindIndicatorMatsTR.py  genComp.py  genDF.sh  genSub.py  genSubTR.py  globalVars.py  mainTR.sh  makeCurrentDags.py  splitOnCluster.py
small_batch/jobFiles/: init.sub  subCurrentDFs.sh  subDF.sh  subTR.sh
splitting/: CMakeLists.txt
splitting/src/: splitting.cpp
temp/: CMakeLists.txt  errors.txt
temp/src/: findIndicatorMats.cpp
